# visfractal

./: CMakeLists.txt  README.md  main.cc  mandelbrot_set.cc  mandelbrot_set.h
fractal/: CMakeLists.txt  mandelbrot_sequence_generator.cc  mandelbrot_sequence_generator.h
graphics/: CMakeLists.txt  display_plot.cc  display_plot.h  pixel.h
math/: CMakeLists.txt  complex_number.cc  complex_number.h  point.h
